# placement

./: .gitignore  README.md  environment.yml  pyproject.toml  root_environment.yml  setup.py  test2.py  test3.py
.github/workflows/: CI tests.yml  CI.yml  spellcheck.yml
demo/: step1_generate_emission_scenarios.ipynb  step2_specify_sensor_locations.ipynb
demo/input_data/: domain.csv  equipment_vertices.csv  source_locations.csv
demo/output_data/: detection_fenceline_locations.npy  detection_grid_locations.npy  detection_valid_locations.npy  fenceline_sensor_locations.csv  grid_locations.csv  valid_sensor_locations.csv
demo/results_fenceline_locations/: PORSS_best_4_sensor_placement_trial_0_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_1_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_2_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_3_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_4_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_5_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_6_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_7_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_8_coverage_3.pkl  PORSS_best_4_sensor_placement_trial_9_coverage_3.pkl
placement/: PORSS.py  casper_run_step3.sh  evaluate_detection.py  optimization.py  simulate_concentrations.py  step5.py
placement/FastGaussianPuff/: CGaussianPuff.cpp  GaussianPuff.py  utilities.py
placement/FastGaussianPuff/FastGaussianPuff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_evaluate_detection.py  test_optimization.py  test_simulate_concentrations.py
(+3 files in other folders)
